...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YzX-Yf-1Ql">
                                <rect key="frame" x="127.5" y="501" width="120" height="120"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="OAM-Xw-BXP"/>
                                    <constraint firstAttribute="height" constant="120" id="mYr-ZQ-7iZ"/>
                                </constraints>
                                <state key="normal" image="Ball"/>
                                <connections>
                                    <action selector="ballAction" destination="6JY-wC-gpp" eventType="touchUpInside" id="rKr-SQ-uLW"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
